// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AutomationSubscriptionDescription /> should render a discounted price for customers with automation add-on discount 1`] = `
<div
  class="description"
>
  <div
    class="flex"
  >
    <div>
      Your current subscription started on
       
      <b>
        Aug 23
      </b>
      .
      <br />
      <br />
      If you cancel now, you will lose access to self-service
       
      immediately.
    </div>
    <div
      class="amountWrapper amount"
    >
      <span
        class="amount"
      >
        <span
          class="fullAmount"
        >
          $30
        </span>
        <wbr />
        <b>
          $15
        </b>
         
        / 
        month
      </span>
    </div>
  </div>
</div>
`;

exports[`<AutomationSubscriptionDescription /> should render for customers already with full add-on features 1`] = `
<div
  class="description"
>
  <div
    class="flex"
  >
    <div>
      Your current subscription started on
       
      <b>
        Aug 23
      </b>
      .
      <br />
      <br />
      If you cancel now, you will lose access to self-service
       
      immediately.
    </div>
    <div
      class="amountWrapper amount"
    >
      <span
        class="amount"
      >
        <b>
          $30
        </b>
         
        / 
        month
      </span>
    </div>
  </div>
</div>
`;

exports[`<AutomationSubscriptionDescription /> should render for customers with legacy automation add-on 1`] = `
<div
  class="description"
>
  <div
    class="flex"
  >
    <div>
      Unlock advanced features of the self-service, and track the performance!
      <br />
      Questions?
       
      <a
        href="mailto:support@gorgias.com"
      >
        <b>
          Get in touch!
        </b>
      </a>
    </div>
    <div
      class="amountWrapper amount"
    >
      <span
        class="amount"
      >
        <b>
          $15
        </b>
         
        / 
        month
      </span>
    </div>
  </div>
  <div
    class="features oldFeatures"
  >
    <li
      class="d-flex align-items-center oldFeatureListItem"
    >
      <span
        class="featureIcon mr-3"
      >
        <i
          class="material-icons"
        >
          low_priority
        </i>
      </span>
      <span>
        Track, Return, Cancel & Custom 
        <b>
          workflows
        </b>
      </span>
    </li>
    <li
      class="d-flex align-items-center oldFeatureListItem"
    >
      <span
        class="featureIcon mr-3"
      >
        <i
          class="material-icons"
        >
          slow_motion_video
        </i>
      </span>
      <span>
        Self-service features in 
        <b>
          chat
        </b>
         and 
        <b>
          help center
        </b>
      </span>
    </li>
    <li
      class="d-flex align-items-center oldFeatureListItem"
    >
      <span
        class="featureIcon mr-3"
      >
        <i
          class="material-icons"
        >
          insights
        </i>
      </span>
      <span>
        Self-service 
        <b>
          statistics
        </b>
      </span>
    </li>
  </div>
</div>
`;

exports[`<AutomationSubscriptionDescription /> should render for customers without any addon features 1`] = `
<div
  class="description"
>
  <div
    class="badge"
  >
    <i
      class="icon material-icons"
    >
      auto_awesome
    </i>
    <span>
      Access these features and more with the Automation Add-on!
    </span>
  </div>
  <div
    class="flex"
  >
    <div>
      Add advanced automation features and automate up to 20% of all interactions.
      <br />
      <a
        href="https://app.livestorm.co/gorgias-1/automaton-add-on-workshop?utm_source=candu&utm_medium=in_product&utm_campaign=homepage_addon"
        rel="noopener noreferrer"
        target="_blank"
      >
        Learn more.
      </a>
    </div>
    <div
      class="amountWrapper amount"
    >
      <span
        class="amount"
      >
        <b>
          $30
        </b>
         
        / 
        month
      </span>
    </div>
  </div>
  <div
    class="features oldFeatures"
  >
    <li
      class="d-flex align-items-center oldFeatureListItem"
    >
      <span
        class="featureIcon mr-3"
      >
        <i
          class="material-icons"
        >
          low_priority
        </i>
      </span>
      <span>
        Track, Return, Cancel & Custom 
        <b>
          workflows
        </b>
      </span>
    </li>
    <li
      class="d-flex align-items-center oldFeatureListItem"
    >
      <span
        class="featureIcon mr-3"
      >
        <i
          class="material-icons"
        >
          slow_motion_video
        </i>
      </span>
      <span>
        Self-service features in 
        <b>
          chat
        </b>
         and 
        <b>
          help center
        </b>
      </span>
    </li>
    <li
      class="d-flex align-items-center oldFeatureListItem"
    >
      <span
        class="featureIcon mr-3"
      >
        <i
          class="material-icons"
        >
          insights
        </i>
      </span>
      <span>
        Self-service 
        <b>
          statistics
        </b>
      </span>
    </li>
  </div>
</div>
`;
